feat(chat-bot): added new cors and crst secuiry confid
description:-
- new security config.